PROTON-529: Windows port of PROTON-525, driver refactor (io and selector) from review 18893
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1576030 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -75,9 +75,11 @@ add_custom_command (
 # Select driver
 if(PN_WINAPI)
   set (pn_io_impl src/windows/io.c)
+  set (pn_selector_impl src/windows/selector.c)
   set (pn_driver_impl src/windows/driver.c)
 else(PN_WINAPI)
   set (pn_io_impl src/posix/io.c)
+  set (pn_selector_impl src/selector.c)
   set (pn_driver_impl src/posix/driver.c)
 endif(PN_WINAPI)
 
@@ -230,6 +232,7 @@ add_subdirectory(../tests/tools/apps/c ../tests/tools/apps/c)
 
 set (qpid-proton-platform
   ${pn_io_impl}
+  ${pn_selector_impl}
   ${pn_driver_impl}
   src/platform.c
   ${pn_driver_ssl_impl}
@@ -263,7 +266,6 @@ set (qpid-proton-core
   src/messenger/store.c
   src/messenger/transform.c
   src/selectable.c
-  src/selector.c
 
   ${CMAKE_CURRENT_BINARY_DIR}/encodings.h
   ${CMAKE_CURRENT_BINARY_DIR}/protocol.h
