PROTON-506: Added unit tests for C url parser
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1576090 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/src/tests/CMakeLists.txt
+++ b/proton-c/src/tests/CMakeLists.txt
@@ -34,4 +34,5 @@ endmacro(pn_add_c_test)
 pn_add_c_test (c-object-tests object.c)
 pn_add_c_test (c-message-tests message.c)
 pn_add_c_test (c-engine-tests engine.c)
+pn_add_c_test (c-parse-url-tests parse-url.c)
 
