PROTON-533: move posix selector.c into posix subdir
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1577323 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -81,7 +81,7 @@ if(PN_WINAPI)
   set (pn_driver_impl src/windows/driver.c)
 else(PN_WINAPI)
   set (pn_io_impl src/posix/io.c)
-  set (pn_selector_impl src/selector.c)
+  set (pn_selector_impl src/posix/selector.c)
   set (pn_driver_impl src/posix/driver.c)
 endif(PN_WINAPI)
 
