--- a/proton-c/src/ProtonConfig.cmake.in
+++ b/proton-c/src/ProtonConfig.cmake.in
@@ -22,8 +22,9 @@
 # Version: @PN_VERSION@
 # URL: http://qpid.apache.org/proton/
 
-set (PROTON_FOUND         "True")
-set (PROTON_VERSION       @PN_VERSION@)
-set (PROTON_INCLUDE_DIRS  "@INCLUDEDIR@")
-set (PROTON_LIBRARY_DIRS  "@PREFIX@/bin")
-set (PROTON_LIBRARIES     "qpid-proton")
+set (Proton_VERSION       @PN_VERSION@)
+
+set (Proton_INCLUDE_DIRS  @INCLUDEDIR@)
+set (Proton_LIBRARIES     optimized @LIBDIR@/@PROTONLIB@ debug @LIBDIR@/@PROTONLIBDEBUG@)
+
+set (Proton_FOUND True)
