tweaked readme, fixed python binding install location
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1582442 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/python/CMakeLists.txt
+++ b/proton-c/bindings/python/CMakeLists.txt
@@ -36,7 +36,7 @@ if (CHECK_SYSINSTALL_PYTHON)
     OUTPUT_VARIABLE PYTHON_SITEARCH_PACKAGES_DEFAULT
     OUTPUT_STRIP_TRAILING_WHITESPACE)
 else ()
-  set (PYTHON_SITEARCH_PACKAGES_DEFAULT ${BINDINGS_DIR}/python/lib${LIB_SUFFIX})
+  set (PYTHON_SITEARCH_PACKAGES_DEFAULT ${BINDINGS_DIR}/python)
 endif ()
 
 if (NOT PYTHON_SITEARCH_PACKAGES)
