PROTON-538: more readme fixes and install tweaks
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1582461 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ endif ()
 set (BINDING_LANGS PERL PHP PYTHON RUBY)
 
 foreach (LANG ${BINDING_LANGS})
-  set (SYSINSTALL_${LANG} ${SYSINSTALL_BINDINGS} CACHE BOOL "Install ${LANG} bindings into interpreter specified location.")
+  set (SYSINSTALL_${LANG} OFF CACHE BOOL "Install ${LANG} bindings into interpreter specified location.")
   if (SYSINSTALL_BINDINGS OR SYSINSTALL_${LANG})
     set (CHECK_SYSINSTALL_${LANG} ON)
   else ()
