--- a/proton-c/bindings/ruby/CMakeLists.txt
+++ b/proton-c/bindings/ruby/CMakeLists.txt
@@ -41,7 +41,7 @@ if (CHECK_SYSINSTALL_RUBY)
 
   set(RUBY_ARCHLIB_DIR_DEFAULT "${OUTPUT_RUBY_ARCHLIB_DIR}")
 else (CHECK_SYSINSTALL_RUBY)
-  set (RUBY_ARCHLIB_DIR_DEFAULT ${BINDINGS_DIR}/ruby/lib${LIB_SUFFIX})
+  set (RUBY_ARCHLIB_DIR_DEFAULT ${BINDINGS_DIR}/ruby)
 endif (CHECK_SYSINSTALL_RUBY)
 
 if (NOT RUBY_ARCHLIB_DIR)
