--- a/proton-c/bindings/CMakeLists.txt
+++ b/proton-c/bindings/CMakeLists.txt
@@ -36,9 +36,34 @@ if (PYTHONLIBS_FOUND)
 endif (PYTHONLIBS_FOUND)
 
 # Prerequisites for Ruby:
+find_program(GEM_EXE "gem")
+macro(CheckRubyGem varname gemname)
+  execute_process(COMMAND ${GEM_EXE} list --local ${gemname}
+    OUTPUT_VARIABLE CHECK_OUTPUT)
+
+  set (${varname} OFF)
+
+  if (CHECK_OUTPUT MATCHES "${gemname}[ ]+\(.*\)")
+    message(STATUS "Found Ruby gem: ${gemname}")
+    set (${varname} ON)
+  else()
+    message(STATUS "Missing Ruby gem dependency: ${gemname}")
+    set (${varname} OFF)
+  endif()
+endmacro()
+
 find_package(Ruby)
 if (RUBY_FOUND)
   set (DEFAULT_RUBY ON)
+
+  CheckRubyGem("HAS_RUBY_GEM_RSPEC"     "rspec")
+  CheckRubyGem("HAS_RUBY_GEM_SIMPLECOV" "simplecov")
+
+  if (HAS_RUBY_GEM_RSPEC AND HAS_RUBY_GEM_SIMPLECOV)
+    set (DEFAULT_RUBY_TESTING ON CACHE INTERNAL "")
+  else()
+    set (DEFAULT_RUBY_TESTING OFF CACHE INTERNAL "")
+  endif (HAS_RUBY_GEM_RSPEC AND HAS_RUBY_GEM_SIMPLECOV)
 endif (RUBY_FOUND)
 
 # Prerequites for PHP:
