PROTON-550: Fail build if Ruby is enabled but missing dependencies.
Now, instead of just stating that a dependency is missing, CMake will
fail if it's trying to build Ruby but any dependency is missing.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1586400 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/CMakeLists.txt
+++ b/proton-c/bindings/ruby/CMakeLists.txt
@@ -17,6 +17,10 @@
 # under the License.
 #
 
+if (NOT DEFAULT_RUBY_TESTING)
+  message(FATAL_ERROR "Ruby bindings cannot be tested while missing dependencies")
+endif (NOT DEFAULT_RUBY_TESTING)
+
 include_directories (${RUBY_INCLUDE_PATH})
 swig_add_module(cproton-ruby ruby ruby.i)
 swig_link_libraries(cproton-ruby ${BINDING_DEPS} ${RUBY_LIBRARY})
