PROTON-596: Add cmake configure_file to customize config.bat for windows builds.
1. Cmake on windows produces all four cmake configurations (debug, relwithdebinfo, ...) on one pass. Producing N config.bat files, one for each configuration, seems like overkill. The build produces just one config.bat that that is set up for RelWithDebInfo.

2. The prototype bash file config.sh does several conditional tests for sensing the build and changing the environment accordingly. The windows version flattens these tests out and forces the settings every time. It's easier to understand this way and requires a lot less testing for proof. Only the Python binding has been exercised; Ruby, Perl, and PHP not so much.

3. A typical 32-bit VS2010 run:
  > mkdir build
  > mkdir install
  > cd build
  > call "%VS100COMNTOOLS%..\..\VC\vcvarsall.bat" x86
  > cmake -G "Visual Studio 10" -DCMAKE_INSTALL_PREFIX=../install ..
  > devenv proton.sln /build "RelWithDebInfo|Win32" /project INSTALL
  > devenv proton.sln /build "Debug|Win32" /project INSTALL
  > call config.bat
  > ctest -VV

There is one python test that fails regularly (out of 282).


git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1600924 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,3 +152,9 @@ if (JAVA_FOUND AND MAVEN_EXE)
 else (JAVA_FOUND AND MAVEN_EXE)
   message (STATUS "Cannot find both Java and Maven: testing disabled for Proton-J")
 endif (JAVA_FOUND AND MAVEN_EXE)
+
+# Generate test environment settings
+if (WIN32)
+    configure_file(${CMAKE_HOME_DIRECTORY}/config.bat.in
+                   ${CMAKE_BINARY_DIR}/config.bat @ONLY)
+endif (WIN32)
