QPID-619: Make config.sh work for all build trees
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1606140 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,7 +154,7 @@ else (JAVA_FOUND AND MAVEN_EXE)
 endif (JAVA_FOUND AND MAVEN_EXE)
 
 # Generate test environment settings
-if (WIN32)
-    configure_file(${CMAKE_HOME_DIRECTORY}/config.bat.in
-                   ${CMAKE_BINARY_DIR}/config.bat @ONLY)
-endif (WIN32)
+configure_file(${CMAKE_SOURCE_DIR}/config.sh.in
+               ${CMAKE_BINARY_DIR}/config.sh @ONLY)
+configure_file(${CMAKE_SOURCE_DIR}/config.bat.in
+               ${CMAKE_BINARY_DIR}/config.bat @ONLY)
