--- a/config.bat.in
+++ b/config.bat.in
@@ -27,7 +27,7 @@ SET PROTON_BUILD_CONFIGURATION=relwithdebinfo
 REM PROTON_HOME  is the root of the proton checkout
 REM PROTON_BUILD is where cmake was run
 
-set PROTON_HOME=@CMAKE_HOME_DIRECTORY@
+set PROTON_HOME=@CMAKE_SOURCE_DIR@
 set PROTON_BUILD=@CMAKE_BINARY_DIR@
 
 set PROTON_HOME=%PROTON_HOME:/=\%
