NO-JIRA: Set default build type to RelWithDebInfo.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1617300 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,14 @@
 #
 cmake_minimum_required (VERSION 2.6)
 
+# Set default build type. Must come before project() which sets default to ""
+set (CMAKE_BUILD_TYPE RelWithDebInfo CACHE string
+  "Build type: Debug, Release, RelWithDebInfo or MinSizeRel (default RelWithDebInfo)")
+if (CMAKE_BUILD_TYPE MATCHES "Deb")
+  set (has_debug_symbols " (has debug symbols)")
+endif (CMAKE_BUILD_TYPE MATCHES "Deb")
+message("Build type is \"${CMAKE_BUILD_TYPE}\"${has_debug_symbols}")
+
 option(BUILD_WITH_CXX "Compile Proton using C++" OFF)
 if ("${CMAKE_GENERATOR}" MATCHES "^Visual Studio")
   # No C99 capability, use C++
